Fix session cookie behind Cloudflare proxy; change login background to plain black

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -25,10 +25,7 @@ body
   text-rendering optimizeLegibility
   vertical-align baseline
   font-size font-size-base
-  background-size cover
-  background-position center center
-  background-repeat repeat-y
-  background-image url('/img/background-eventawards2018.jpg')
+  background #000
   position relative
   padding-bottom 74px
 
